--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,136 @@
 /* You can add global styles to this file, and also import other style files */
+/* You can add global styles to this file, and also import other style files */
+/* Set height of the grid so .sidenav can be 100% (adjust if needed) */
+
+.row.content {height: 1500px}
+
+/* Set gray background color and 100% height */
+.sidenav {
+  background-color: #f1f1f1;
+  height: 100%;
+}
+
+/* Set black background color, white text and some padding */
+.footer {
+  background-color:  #ff3399;
+  color: #4d0026;
+  padding: 105px;
+}
+
+.footer a {
+  color: #4d0026;
+}
+
+.carousel-welcome {
+  position: relative;
+  height:300px;
+  width:99%;
+  margin-right:auto;
+  margin-left:auto;
+  max-width:100%;
+  text-align:center;
+  overflow:hidden;
+}
+
+/* On small screens, set height to 'auto' for sidenav and grid */
+@media screen and (max-width: 767px) {
+ .sidenav {
+   height: auto;
+   padding: 15px;
+ }
+ .row.content {height: auto;}
+}
+
+/* Style the counter cards */
+.card {
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  padding: 16px;
+  text-align: center;
+  background-color: #f1f1f1;
+}
+
+@media screen and (max-width: 600px) {
+  .column {
+    width: 100%;
+    display: block;
+    margin-bottom: 20px;
+  }
+}
+
+.box {
+  position: relative;
+  display: inline-block;
+  width: 210px;
+  height: 300px;
+  background-color: #fff;
+  border-radius: 5px;
+  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
+  border-radius: 5px;
+  -webkit-transition: all 0.6s cubic-bezier(0.165, 0.84, 0.44, 1);
+  transition: all 0.6s cubic-bezier(0.165, 0.84, 0.44, 1);
+  padding-top:1em;
+  padding-left:1px;
+}
+
+.box::after {
+  content: "";
+  border-radius: 5px;
+  position: absolute;
+  z-index: -1;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
+  opacity: 0;
+  -webkit-transition: all 0.6s cubic-bezier(0.165, 0.84, 0.44, 1);
+  transition: all 0.6s cubic-bezier(0.165, 0.84, 0.44, 1);
+}
+
+.box:hover {
+  -webkit-transform: scale(1.25, 1.25);
+  transform: scale(1.25, 1.25);
+}
+
+.box:hover::after {
+    opacity: 1;
+}
+
+.entry-title{
+  color:#070542;
+}
+
+.entry-title{
+  text-align:center;
+}
+
+.service-icon{
+  text-align:center;
+}
+
+.fa{
+  font-size:28px;
+}
+
+.affix {
+  top: 0;
+  width: 100%;
+  z-index: 9999 !important;
+}
+
+.affix + .container-fluid {
+  padding-top: 70px;
+}
+
+.img-responsive {
+  width: 100%;
+  height: auto;
+}
+
+.vertic {
+  border-left: 3px solid white;
+  height: 20em;
+  margin-left: 3px;
+}
+
+
